<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            style="@style/FormLabel"
            android:text="@string/full_name"
            android:labelFor="@+id/fullNameEditText"/>
        <EditText
            android:id="@+id/fullNameEditText"
            style="@style/FormEditText"
            android:inputType="textPersonName|textCapWords" />

        <TextView
            style="@style/FormLabel"
            android:text="@string/email"
            android:labelFor="@+id/emailEditText"/>
        <EditText
            android:id="@+id/emailEditText"
            style="@style/FormEditText"
            android:layout_marginBottom="8dp"
            android:inputType="textEmailAddress" />

        <CheckBox
            android:id="@+id/receiveEmailsCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/receive_emails_prompt"
            android:layout_marginBottom="16dp"/>

        <TextView
            style="@style/FormLabel"
            android:text="@string/phone_number"
            android:labelFor="@+id/phoneEditText"/>
        <EditText
            android:id="@+id/phoneEditText"
            style="@style/FormEditText"
            android:layout_marginBottom="0dp"
            android:inputType="phone"
            android:hint="@string/phone_hint"/>

        <RadioGroup
            android:id="@+id/phoneTypeRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">
            <RadioButton
                android:id="@+id/commercialRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_commercial" />
            <RadioButton
                android:id="@+id/residentialRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/type_residential" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/addMobileCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_mobile_phone" />

        <LinearLayout
            android:id="@+id/mobileLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_marginBottom="16dp"
            tools:visibility="visible">
            <TextView
                style="@style/FormLabel"
                android:layout_marginTop="8dp"
                android:text="@string/mobile_phone_number"
                android:labelFor="@+id/mobileEditText"/>
            <EditText
                android:id="@+id/mobileEditText"
                style="@style/FormEditText"
                android:layout_marginBottom="0dp"
                android:inputType="phone"
                android:hint="@string/phone_hint" />
        </LinearLayout>

        <TextView
            style="@style/FormSectionHeader"
            android:text="@string/gender" />
        <RadioGroup
            android:id="@+id/genderRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">
            <RadioButton
                android:id="@+id/maleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_male" />
            <RadioButton
                android:id="@+id/femaleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/gender_female" />
        </RadioGroup>

        <TextView
            style="@style/FormLabel"
            android:text="@string/date_of_birth"
            android:labelFor="@+id/birthDateEditText"/>
        <EditText
            android:id="@+id/birthDateEditText"
            style="@style/FormEditText"
            android:hint="@string/date_of_birth_hint"
            android:inputType="date" />

        <TextView
            style="@style/FormSectionHeader"
            android:text="@string/education_level" />
        <Spinner
            android:id="@+id/educationSpinner"
            style="@style/FormSpinner"
            android:entries="@array/education_level_array" />

        <LinearLayout
            android:id="@+id/elementaryHighSchoolLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">
            <TextView
                style="@style/FormLabel"
                android:layout_marginTop="8dp"
                android:text="@string/graduation_year"
                android:labelFor="@+id/graduationYearEditText"/>
            <EditText
                android:id="@+id/graduationYearEditText"
                style="@style/FormEditText"
                android:inputType="number"
                android:maxLength="4" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/undergradSpecializationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">
            <TextView
                style="@style/FormLabel"
                android:layout_marginTop="8dp"
                android:text="@string/completion_year"
                android:labelFor="@+id/undergradCompletionYearEditText"/>
            <EditText
                android:id="@+id/undergradCompletionYearEditText"
                style="@style/FormEditText"
                android:inputType="number"
                android:maxLength="4" />
            <TextView
                style="@style/FormLabel"
                android:text="@string/institution"
                android:labelFor="@+id/undergradInstitutionEditText"/>
            <EditText
                android:id="@+id/undergradInstitutionEditText"
                style="@style/FormEditText"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mastersPhdLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">
            <TextView
                style="@style/FormLabel"
                android:layout_marginTop="8dp"
                android:text="@string/completion_year"
                android:labelFor="@+id/mastersCompletionYearEditText"/>
            <EditText
                android:id="@+id/mastersCompletionYearEditText"
                style="@style/FormEditText"
                android:inputType="number"
                android:maxLength="4" />
            <TextView
                style="@style/FormLabel"
                android:text="@string/institution"
                android:labelFor="@+id/mastersInstitutionEditText"/>
            <EditText
                android:id="@+id/mastersInstitutionEditText"
                style="@style/FormEditText"
                android:inputType="text" />
            <TextView
                style="@style/FormLabel"
                android:text="@string/thesis_title"
                android:labelFor="@+id/thesisTitleEditText"/>
            <EditText
                android:id="@+id/thesisTitleEditText"
                style="@style/FormEditText"
                android:inputType="textCapSentences"/>
            <TextView
                style="@style/FormLabel"
                android:text="@string/advisor"
                android:labelFor="@+id/advisorEditText"/>
            <EditText
                android:id="@+id/advisorEditText"
                style="@style/FormEditText"
                android:inputType="textPersonName|textCapWords"/>
        </LinearLayout>

        <TextView
            style="@style/FormLabel"
            android:layout_marginTop="16dp"
            android:text="@string/jobs_of_interest"
            android:labelFor="@+id/jobsInterestEditText"/>
        <EditText
            android:id="@+id/jobsInterestEditText"
            style="@style/FormEditText"
            android:gravity="top"
            android:hint="@string/jobs_of_interest_hint"
            android:inputType="textMultiLine"
            android:lines="3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clearButton"
                style="@style/FormButton.Secondary"
                android:text="@string/clear_button" />

            <Button
                android:id="@+id/saveButton"
                style="@style/FormButton.Primary"
                android:text="@string/save_button" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>